# live-interactive-agent

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
agent-runtime/: .env.example  README.md  main.py  pyproject.toml  validate_env.py  verify_import.py
agent-runtime/agents/: base_agent.py
agent-runtime/config/: settings.py
agent-runtime/core/: chat.py  context.py  error_handler.py  logging.py  plugins.py  session.py
agent-runtime/utils/: health.py
backend/: .env.example  README.md  pyproject.toml  validate_env.py  verify_db.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 80334deb06fe_initial_schema_users_orgs_sessions.py  a01b711779b0_add_agent_versions.py  a465b6431c1a_add_session_templates_table.py  aed9f12b041f_add_agents_table.py  f433a5cffc1c_add_session_fields_for_token_metadata.py
backend/app/: main.py
backend/app/api/v1/: agents.py  auth.py  health.py  organizations.py  router.py  session_templates.py  sessions.py
backend/app/cache/: redis.py
backend/app/core/: config.py  logging.py  permissions.py  security.py
backend/app/db/: session.py
backend/app/exceptions/: base.py  handlers.py
backend/app/middleware/: cors.py  request_id.py
backend/app/models/: __init__.py  agent.py  agent_version.py  enums.py  organization.py  session.py  session_template.py  user.py
backend/app/schemas/: agent.py  auth.py  base.py  health.py  organization.py  session.py  session_template.py
backend/app/services/: agent.py  auth.py  livekit_token_service.py  organization.py  room_name_generator.py  session_service.py  session_template.py
backend/scripts/: example_start_session.py  seed.py  test_token.py
docker/: livekit.yaml
docs/: 01_Project_Overview.md  02_High_Level_Design.md  03_Low_Level_Design.md  04_Epic_Task_Breakdown.md  05_Epic_1_tasks.md  06_Epic_2_tasks.md  07_Epic_3_tasks.md  08_Epic_4_tasks.md  09_Epic_5_tasks.md  10_Epic_6_tasks.md  11_Epic_7_tasks.md  12_Epic_8_tasks.md  13_Epic_12_tasks.md  14_Epic_13_tasks.md  15_Epic_14_tasks.md  16_Epic_22_tasks.md  17_Epic_23_tasks.md  livekit-setup.md
frontend/: .env.example  README.md  package.json  tsconfig.json
frontend/app/: layout.tsx
frontend/app/(session)/: layout.tsx
frontend/hooks/: index.ts  useConnectionQuality.ts  useConnectionStatus.ts  useLiveKit.tsx  useParticipants.ts  useTheme.tsx
frontend/services/: config.ts  livekit.ts
frontend/styles/: globals.css
frontend/types/: livekit.ts
frontend/utils/: index.ts  livekit-errors.ts
scripts/: health-check.sh  livekit-token.sh  setup.sh
(+20 files in other folders)
